--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1159935819017436" crossorigin="anonymous"></script>
     <script async src="https://arc.io/widget.min.js#fFNTMsJ9"></script>
     <meta charset="UTF-8">
-    <title>Pillow</title>
+    <title>Darkspeed</title>
 </head>
 <body scroll="no" id="body">
 <main>
